wip: local sidecar/dashboard changes + Forge launcher before upstream sync
Includes run-forge.sh launcher and graceful gauntlet file loading.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>